--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,7 @@
 :root {
   --primary-color: #0a1128;
   --white: #ffffff;
+  --ligth-gray-color: #eeeeee;
   --gap: 3rem;
 }
 
@@ -44,6 +45,10 @@ h5 {
   font-size: 4rem;
 }
 
+a {
+  text-decoration: none;
+}
+
 .main-bg {
   background-image: url('../img/mainbg.svg');
   background-size: cover;
@@ -62,4 +67,60 @@ h5 {
 
 .section {
   min-height: 100vh;
+}
+
+.menu {
+  background: var(--white);
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  border-bottom: 1px solid var(--ligth-gray-color);
+}
+
+.menu-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 0;
+  padding-bottom: 0;
+}
+
+.menu h1 {
+  font-size: 2.3rem;
+  color: var(--primary-color);
+}
+
+.menu h1 a {
+  color: inherit;
+}
+
+.menu ul {
+  list-style: none;
+  display: flex;
+}
+
+.menu ul li a {
+  display: block;
+  padding: 2rem;
+  font-size: 1.8rem;
+  color: var(--primary-color);
+  position: relative;
+}
+
+.menu ul li a::after {
+  content: '';
+  position: absolute;
+  bottom: 1.5rem;
+  left: 50%;
+  width: 0;
+  height: 0.2rem;
+  background: crimson;
+  transition: all 300ms ease-in-out;
+}
+
+.menu ul li a:hover:after {
+  width: 50%;
+  left: 25%;
 }
