--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,48 +7,7 @@
   --gap: 3rem;
 }
 
-* {
-  margin: 0;
-  padding: 0;
-}
-
-html {
-  font-size: 62.5%;
-}
-
-body {
-  font-family: 'Open Sans', sans-serif;
-  background-image: url('../img/bullseye-gradient.svg');
-  background-size: cover;
-  background-position: center center;
-  font-size: 2rem;
-}
-
-h1 {
-  font-size: 6rem;
-  text-transform: uppercase;
-}
-
-h2 {
-  font-size: 5.5rem;
-}
-
-h3 {
-  font-size: 5rem;
-}
-
-h4 {
-  font-size: 4.5rem;
-}
-
-h5 {
-  font-size: 4rem;
-}
-
-a {
-  text-decoration: none;
-}
-
+/* Classes para as seções */
 .main-bg {
   background-image: url('../img/bullseye-gradient.svg');
   background-size: cover;
@@ -60,7 +19,7 @@ a {
 }
 
 .main-content {
-  max-width: 1200px;
+  max-width: 120rem;
   margin: 0 auto;
   padding: var(--gap);
 }
@@ -69,14 +28,20 @@ a {
   min-height: 100vh;
 }
 
+/* menu */
+
+.menu-spacing {
+  height: 65px;
+}
+
 .menu {
-  background: var(--white);
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
   width: 100%;
-  border-bottom: 1px solid var(--ligth-gray-color);
+  z-index: 1;
+  border-bottom: 0.1rem solid var(--ligth-gray-color);
 }
 
 .menu-content {
@@ -123,4 +88,34 @@ a {
 .menu ul li a:hover:after {
   width: 50%;
   left: 25%;
+}
+
+/* Seção intro */
+
+.intro-content {
+  position: relative;
+  top: -6.5rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: var(--gap);
+  height: 100vh;
+}
+
+.intro-text-content,
+.intro-img {
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: center;
+}
+
+.intro-text-content h2 {
+  font-size: 6rem;
+  margin-bottom: 5rem;
+  text-transform: uppercase;
+  line-height: 1.2;
+}
+
+.intro-img img {
+  max-width: 100%;
+  height: auto;
 }
