--- a/assets/css/element.css
+++ b/assets/css/element.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 html {
@@ -18,10 +19,11 @@ body {
 h1 {
   font-size: 6rem;
   text-transform: uppercase;
+  font-family: 'Montserrat', sans-serif;
 }
 
 h2 {
-  font-size: 5.5rem;
+  font-family: 'Montserrat', sans-serif;
   font-size: 6rem;
   margin-bottom: 5rem;
   text-transform: uppercase;
@@ -29,14 +31,17 @@ h2 {
 }
 
 h3 {
+  font-family: 'Montserrat', sans-serif;
   font-size: 5rem;
 }
 
 h4 {
+  font-family: 'Montserrat', sans-serif;
   font-size: 4.5rem;
 }
 
 h5 {
+  font-family: 'Montserrat', sans-serif;
   font-size: 4rem;
 }
 
